Add post-processing for images urls
